--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,17 @@
+<legend id="title">What I do ?</legend>
+<br>
 <div class="row columns">
   <!--The ngIf attributes placed on the login and logout buttons check in real time if the user is logged in or not. -->
-  <button (click)="login()" *ngIf="!(user | async)?.uid">Anonymous Login</button>
-  <button (click)="logout()" *ngIf="(user | async)?.uid">Logout</button>
+  <button (click)="login()" *ngIf="!(user | async)?.uid" id="btn">Anonymous Login</button>
+  <button (click)="logout()" *ngIf="(user | async)?.uid" id="btn">Logout</button>
   <!--The input uses the keyup.enter event to call the Send method and send the textfield value. -->
   <input type="text" id="message" *ngIf="(user | async)?.uid" placeholder="What is it that you do?" (keyup.enter)="Send($event.target.value)" [(ngModel)]="msgVal" />
   <!--On the p tag we're using *ngFor to iterate through the list of items from the Firebase database. We're showing a pin.svg graphic and the message. -->
   <div id="details-container">
       <p *ngFor="let item of items | async"><img src="https://s-media-cache-ak0.pinimg.com/originals/79/87/69/79876968d0232ae36a918226d94bcff1.gif"/>
         {{item.message}}
+        <br><br>
+        <button class="btn-danger" id="btn-delete" (click)="delete(item)">X</button>
       </p>
   </div>
 
